--- a/event/assets/partials/partial-zarurat.html
+++ b/event/assets/partials/partial-zarurat.html
@@ -9,20 +9,22 @@
             <div class="row">
                 <div>
                     <p>Zarurat - the help beyond is a social endeavor by the JECRC foundation which focuses on imparting a healthy all round development of the underprivileged children from the nearby slum areas. Keeping up with the spirit of Renaissance, the pre-Renaissance event “Zarurat - celebrating innocence” is celebrated, seeing a footfall of 350 kids from various NGOs and 200 student volunteers.</p>
-                    <p>    The team is very fortunate to be blessed and mentored by Nobel Peace Prize Laureate Shree Kailash Satyarthi Sir who has graced the previous year's event with his benign presence.</p>
-                    <p>    Continuing the spirit of celebration, Zarurat will be organising this year's event on 7th March 2016. The event is proposed to witness the esteemed presence of Shri Anshu Gupta, founder Goonj Foundation, Shri Lenin Raghuvanshi, founder of People's Vigilance committee on Human Rights  and Ms. Gloria Benny, founder of Make a Difference.</p>
+                    <p>The team is very fortunate to be blessed and mentored by Nobel Peace Prize Laureate Shree Kailash Satyarthi Sir, Shri Anshu Gupta, founder Goonj Foundation, Shri Lenin Raghuvanshi, founder of People's Vigilance committee on Human Rights and Ms. Gloria Benny, founder of Make a Difference  who has graced the previous year's event with their benign presence.</p>
+                    <p>Continuing the spirit of celebration, Zarurat will be organising this year's event on 7th March 2017. The event is proposed to witness the esteemed presence of Mr. Chandi Prasad Bhatt, founder Chipko Movement and Mr. Rajendra Singh, well known as waterman of India.</p>
                 </div>
             </div>
         </div>
         <div role="tabpanel" class="tab-pane fade" id="tab2">
             <div class="row">
                 <ul>
+                    <li><b>ZUMBA DANCE </b> : Zumba Dance is an aerobic exercise which is kept as an inaugural activity to give an energetic start to the full day event. This will be instructed by Ms. Shefali Jain, a Zumba instructor at “Shefali’s Dance and Fitness Studio” in Jaipur.</li>
+					  <li><b>PRASTUTI</b> : A platform for the kids to showcase their talent.</li>
+					 <li><b>Timeless Tales with Shivangi Sharma</b> : Shivangi Sharma is a young Story Teller from Delhi who has performed in great events like “Kracker Jack Carnival” and “Street Food Festival”, which are very well known fests in Delhi.</li>
                     <li><b>KALAKRITI</b> : A platform for the children to go beyond their horizons and create a world of their imagination.</li>
-                    <li><b>PRASTUTI</b> : A platform for the kids to showcase their talent.</li>
+                  
                     <li><b>HUNGAMA </b> : A magic show is organized for the children.</li>
-                    <li><b>SANGOSTHI</b> : A social meet, where we are bringing the concerned minds to discuss and expouse the efforts taken in the direction to improve the society.</li>
-                    <li><b>DENTAL CHECKUP</b> : Health check-up in association with one of the leading hospitals.</li>
-                    <li><b>AWARENESS SESSION</b> : A session organized for parents where they will be made aware of the various educational and health policies started by the government.</li>
+                   
+                    <li><b>AWARENESS SESSION</b> : A session organized for kids where they will be made aware of the Swachch Bharat campaign will be presented by TEAM SOCH.</li>
                     <li><b>BAL MAHOTSAV</b> : A kids carnival for the fun and entertainment of the kids.</li>
                 </ul>
             </div>
